<resources>
    <string name="app_name">YouBank</string>
    <string name="action_settings">Settings</string>

    <!-- Greetings screen -->
    <string name="greet_login">Login</string>
    <string name="greet_create_account">Create Account</string>

    <!-- Content descriptions -->
    <string name="greet_logo_descriptions">YouBank Logo</string>
    <string name="fake_profile_img"></string>

    <!-- Account creation -->
    <string name="account_create_btn">Create Account</string>
    <string name="account_create_password_btn">Create Password</string>
    <string name="account_create_cpr">CPR</string>
    <string name="account_create_full_name">Full name</string>
    <string name="account_create_address">Address</string>
    <string name="account_create_city">City</string>
    <string name="account_create_postal">Postal</string>

    <!-- Account Support modal -->
    <string name="account_support_greeting">What\'s Up ?</string>
    <string name="account_support_chat">Chat support</string>
    <string name="account_support_chat_sub">24/7 Meme support</string>
    <string name="account_support_settings">Account Settings</string>
    <string name="account_support_logout">Log Out</string>


    <!--Transfer screen -->
    <string-array name="select_accounts">
        <item>Martin</item>
        <item>Dainish</item>
        <item>Patrick</item>
    </string-array>

    <!-- Card Freeze modal -->
    <string name="card_freeze_headline">Freeze the card ?</string>
    <string name="card_freeze_subheader">All transactions will be locked</string>
    <string name="card_freeze_subheader2">You can unfreeze at any time</string>
    <string name="card_freeze_accept">Freeze</string>
    <string name="card_freeze_cancel">Cancel</string>

    <string name="btn_freezecard"><font size="16">Freeze Card</font>\n\<font size="8">All new transactions will be declined</font></string>
    <string name="btn_showinformation"><font size="16">Show Information</font>\n\<font size="8">Card number, Expiry date and CCV</font></string>

    <!-- Forgot Password -->
    <string name="forgot_password_text">Have you forgotten your password? Oh no! Do not worry, we got your back covered. Please enter your email below, and we\'ll reset it for you.
        </string>

    <!-- Create Passowrd notice -->
    <string name="create_4_digit_password_notice">Type in a 4 digit password combination. You will need this to login once you have been created in our system. Please refrain from using easy combinations like 0000 or 1111.
        </string>
    <string name="create_password_notice">This password will be used to log you in the first time and if you logout you will have to use this password again. After this screen you have to create a 4 digit password to log you in for everyday use.</string>

    <!-- Warning Label -->
    <string name="warningLabelNoMatch">Passwords doesn\'t match each other!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>