<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    tools:context=".fragments.buttomModals.AccountSupportDialogFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_support_greeting"
        android:textFontWeight="700"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/header_gutter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/SupportSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/account_support_chat_sub"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/SupportImg"
        app:layout_constraintStart_toEndOf="@+id/SupportImg"
        app:layout_constraintTop_toBottomOf="@+id/SupportHeader" />

    <TextView
        android:id="@+id/SupportHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/account_support_chat"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/SupportSubHeader"
        app:layout_constraintStart_toEndOf="@+id/SupportImg"
        app:layout_constraintTop_toTopOf="@+id/SupportImg" />

    <ImageView
        android:id="@+id/settings_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_keypad_password_circle"
        app:layout_constraintBottom_toTopOf="@+id/LogoutImg"
        app:layout_constraintStart_toStartOf="@+id/leftGutter"
        app:layout_constraintTop_toBottomOf="@+id/SupportImg"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/SupportImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_keypad_password_circle"
        app:layout_constraintBottom_toTopOf="@+id/settings_img"
        app:layout_constraintStart_toStartOf="@+id/leftGutter"
        app:layout_constraintTop_toTopOf="@+id/header_gutter"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/SettingsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/account_support_settings"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/settings_img"
        app:layout_constraintStart_toEndOf="@+id/settings_img"
        app:layout_constraintTop_toTopOf="@+id/settings_img" />

    <ImageView
        android:id="@+id/LogoutImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_keypad_password_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/leftGutter"
        app:layout_constraintTop_toBottomOf="@+id/settings_img"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/LogoutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/account_support_logout"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/LogoutImg"
        app:layout_constraintStart_toEndOf="@+id/LogoutImg"
        app:layout_constraintTop_toTopOf="@+id/LogoutImg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGutter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/header_gutter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/SupportImg"
        app:layout_constraintGuide_begin="62dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttomLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="302dp" />

</androidx.constraintlayout.widget.ConstraintLayout>